# axum-app

./: Cargo.toml
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_data.rs  routes_login.rs  routes_tickets.rs
static/: index.html
tests/: http_tests.rs
