[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
lazy-regex = "3.0.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

